[package]
name = "raildata"
version = "0.1.0"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
edition = "2018"

[[bin]]
name = "raildata"
doc = false

[dependencies]
bincode		= "1.1.3"
crossbeam       = "0.8.0"
derive_more     = "0.14.0"
osmxml          = { git = "https://github.com/partim/osmxml.git" }
url             = "1.2"
ignore          = "0.4"
rayon           = "1.5.0"
serde 		= { version = "1.0", features = ["derive"] }
yaml-rust	= "0.4.4"

