[package]
name = "raildata"
version = "0.1.0"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
edition = "2021"

[[bin]]
name = "raildata"
doc = false

[dependencies]
bincode		= "1.1.3"
clap            = { version = "4", features = ["cargo", "derive"] }
crossbeam       = "0.8.0"
derive_more     = "0.14.0"
osmxml          = { git = "https://github.com/partim/osmxml.git" }
url             = "1.2"
httools         = { git = "https://github.com/nlnetlabs/httools", optional = true, features = [ "json"] }
ignore          = "0.4"
paste           = "1.0"
radix_trie      = "0.2"
rayon           = "1.5.0"
serde 		= { version = "1.0", features = ["derive"] }
tokio           = { version = "1", optional = true, features = ["rt-multi-thread"] }
unicode-normalization = "0.1.13"
yaml-rust	= "0.4.4"

[features]
#http = [ "httools", "tokio" ]

